修改内容及布局

--- a/index.html
+++ b/index.html
@@ -100,27 +100,34 @@
                         </div>
                     </div>
                     <div class="skill skill4">
-                        <div class="type">jQuery</div>
+                        <div class="type">Vue</div>
                         <div class="grasp-degree">
                             <div class="grasp"></div>
                             <div class="not-grasp"></div>
                         </div>
                     </div>
                     <div class="skill skill5">
-                        <div class="type">SASS</div>
+                        <div class="type">jQuery</div>
                         <div class="grasp-degree">
                             <div class="grasp"></div>
                             <div class="not-grasp"></div>
                         </div>
                     </div>
                     <div class="skill skill6">
-                        <div class="type">Node.js</div>
+                        <div class="type">SASS</div>
                         <div class="grasp-degree">
                             <div class="grasp"></div>
                             <div class="not-grasp"></div>
                         </div>
                     </div>
                     <div class="skill skill7">
+                        <div class="type">Node.js</div>
+                        <div class="grasp-degree">
+                            <div class="grasp"></div>
+                            <div class="not-grasp"></div>
+                        </div>
+                    </div>
+                    <div class="skill skill8">
                         <div class="type">Angular</div>
                         <div class="grasp-degree">
                             <div class="grasp"></div>
@@ -139,21 +146,21 @@
                 	<h1>项目经历</h1>
                 </div>
                 <div id="project_list_content">
-                    <div class="project_block">
-                        <h3 class="project_title">智能婴儿看护系统</h3>
-                        <p class="project_describe">德致伦公司实习时做的项目，主要负责温度传感模块、光传感模块、图像处理部分、微信平台的简单php代码编写和系统脚本编写。</p>
-                    </div>
                     <div class="project_block project_little">
-                        <h3 class="project_title">基于安卓系统手势识别</h3>
-                        <p class="project_describe">主要负责系统底层触摸上报事件的分析及识别不同手势的算法设计。</p>
+                        <h3 class="project_title">餐谋网主页</h3>
+                        <p class="project_describe">利用vue实现的餐谋网单页面应用，主要展示餐谋网的一些基本信息，该项目进一步巩固了对vue框架的了解，也锻炼了布局的能力。</p>
+                    </div>
+                    <div class="project_block">
+                        <h3 class="project_title">基于vue的数据可视化展示平台</h3>
+                        <p class="project_describe">自己搭建了整个平台，从数据的调查，群聊数据的分析，到用vue结合vuex和vue-router搭建基本的平台，再到用echarts进行数据可视化。利用vuex实现登录功能，利用vue-router实现单页面路由。</p>
                     </div>
                     <div class="project_block">
                         <h3 class="project_title"><a href="https://github.com/hieeyh/Notepad">基于PhoneGap的语音记事本</a></h3>
                         <p class="project_describe">一个基于PhoneGap框架的记事本app，用html、css、javascript（jquery）实现了记事本基本的功能，项目还用到了WebSQL来存储，删除，修改记事本中的标签数据。</p>
                     </div>
                     <div class="project_block">
-                        <h3 class="project_title"><a href="https://github.com/hieeyh/personal-task-management">个人任务管理系统</a></h3>
-                        <p class="project_describe">百度ife前端学院任务之一，项目中不仅用到了基本的html、css、js，还涉及到了sass、grunt、前端模块化、网页性能优化等知识。这个项目，让我对前端技能的掌握更加全面。</p>
+                        <h3 class="project_title"><a href="https://github.com/hieeyh/personal-task-management">基于安卓系统手势识别</a></h3>
+                        <p class="project_describe">主要负责系统底层触摸上报事件的分析及识别不同手势的算法设计。</p>
                     </div>
                 </div>   
                 <h4>更多精彩，请移步<a href="https://github.com/hieeyh">Github</a></h4>                    
